# file-server-bench

./: Cargo.toml  README.md  simple.out
configs/: simple.yaml
outputs/: simple.out
src/: benchmark.rs  client.rs  main.rs  tester.rs
