[package]
name = "nnab"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.10.1"
toki = "0.1.0"
tokio = { version = "1.52.1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
indicatif = "0.18.4"
